test_regress/t/t_stop_bad.out
Intentional stop
%Error: t/t_stop_bad.v:9: Verilog $stop
Aborting...
